# netifd

./: CMakeLists.txt  README.md  config.c  device.c  device.h  dhcp-script.c  interface-ip.c  interface-ip.h  interface.c  isc-dhcp-script.c  main.c  openwrt.code-workspace  proto-dhcp.c  proto-isc-dhcp.c  proto-udhcp.c  proto-zcip.c  proto.c  system-dummy.c  system-linux.c  system.h  ubus.c  udhcp-script.c  zcip-script.c
.github/workflows/: publish_doc.yml  tests.yml
doc/: example.bridge  example.dhcp  example.routes  example.static  readme.adoc  readme.html
doc/highlight/: highlight.min.js
doc/highlight/src/: netifd.js
package/: debian.changelog  debian.control  debian.copyright  debian.netifd.dsc  debian.rules
test/: Dockerfile  Makefile  busybox.cfg  run_tests.py
test/test_runner/: compare.py  loader.py  process.py  runner.py  writer.py
test/testcases/test_bridge/: ipaddr4_br-bridge.json  iplink_dhcp0.json  network
test/testcases/test_bridge2/: dhcpd4_dhcp0.conf  network
test/testcases/test_isc-dhcp/: dhcpd6_dhcp0.conf  ipaddr6_dhcp0.json  iplink_dhcp0.json  iproute4_dhcp0.json  nameservers  network  waitfor
test/testcases/test_simple/: ipaddr4_eth0.json  ipaddr4_test_veth.json  ipaddr4_test_veth_right.json  ipaddr6_eth0.json  iplink_eth0.json  iplink_test_veth.json  iproute4_eth0.json  iproute6_eth0.json  network  sysctl4_eth0.json  sysctl4_global.json  sysctl4_lo.json  sysctl6_eth0.json  sysctl6_lo.json  sysctl6_test_veth.json  sysctl6_test_veth_right.json  waitfor
test/testcases/test_udhcp/: iplink_lo.json  network
test/testcases/test_vlan/: iplink_eth0.43.json  iplink_vlan41ad.json  iplink_vlan42q.json  network
test/testcases/test_zcip/: ipaddr4_eth0.json  network
